# ML-Experiment-Orchestrator

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: default.yaml
docker/: Dockerfile  Dockerfile.mlflow  docker-compose.yml
ml_experiment_orchestrator/: __init__.py  config.py  main.py
ml_experiment_orchestrator/agents/: __init__.py  base.py  critic.py  data_analysis.py  demo_responses.py  evaluation.py  experiment_runner.py  feature_engineering.py  hyperparameter_optimizer.py  planner.py  replanner.py  report.py
ml_experiment_orchestrator/api/: dependencies.py  routes.py
ml_experiment_orchestrator/db/: session.py
ml_experiment_orchestrator/graph/: routing.py  state.py  workflow.py
ml_experiment_orchestrator/models/: database.py  schemas.py
ml_experiment_orchestrator/services/: data_loader.py  experiment_service.py  mlflow_service.py  model_registry.py
tests/: test_custom_feature_engineering.py  test_demo_mode.py
ui/: app.py
