[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-experiment-orchestrator"
version = "0.1.0"
description = "Autonomous Multi-Agent ML Experiment Orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Agent Framework
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",

    # ML Libraries
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "optuna>=3.6.0",
    "imbalanced-learn>=0.12.0",

    # Experiment Tracking
    "mlflow>=2.15.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",

    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Config
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",

    # UI
    "streamlit>=1.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
